[project]
name = "kuma-push-agent"
version = "0.1.0"
description = "Remote health-check agent for Uptime Kuma"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "uptime-kuma-api-v2",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "bcrypt>=4.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
